﻿<h3>Multifunction 02.05.00</h3>
<p class="Contributor">
    Chris Hammond <br />
    <a href="mailto:skins@christoc.com">skins@christoc.com</a><br />
    <a href="http://www.christoc.com">http://www.christoc.com</a><br />
</p>
<hr/>
<div class="License">
    <h3>About the MultiFunction Skin and Container Package</h3>
	<p>
        <b>Version 02.05.00</b>
		<ul>
			<li>Changed doctype to HTML5 for all skin layouts.</li>
			<li>Fixed invalid HTML for the FooterPicture div.</li>
			<li>Changed copyright statements and license to Christoc.com.</li>
			<li>Fixed CSS issue with .UserLogin that was causing the Register and Login links to not display.</li>
			<li>Fixed CSS issue with the DNN Categories/Tags listing in Horizontal mode (list items are floating now instead of going vertical)</li>
		</ul>
	</p>

	<p>
        <b>Version 02.00.02</b>
		<ul>
			<li>Added two additional panes to Two-Column layout, now have a large left pane and smaller right, in addition to the smaller left and larger right.</li>
			
		</ul>
	</p>
<p>
        <b>Version 02.00.01</b>
		<ul>
			<li><h1>WARNING You will need to resize your images for V2.0 (2.0.1) as we have changed the width of the skin. It is recommended that you do this in test, before production.</h1></li>
			<li>Fixed Line-Height CSS for Normal class</li>
			<li>Fixed Margin-Bottom CSS for a number of HTML objects (p)</li>
		</ul>
	</p>
	<p>
        <b>Version 02.00.00</b>
		<ul>
			<li>Converted skin to be larger, 1200px instead of 960px wide</li>
			<li>New "Blank" container</li>
			<li>CSS Fixes for the Event Viewer word wrap in DNN 7.0</li>
			<li>Resized Header_Graphic.psd to be 169px height</li>
			<li>Utilizing DNN6/7 USER/LOGIN controls</li>
			<li>Added breadcrumb control</li>
			<li>Removed background color from Body on the popup skin</li>
			<li>Replaced default DNN7 Blue button color with greyscale color for multifunction</li>
			<li>Fixed an issue in the footer with UL margins</li>